--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/intygMakulera.dialog.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/intygMakulera.dialog.html
@@ -28,13 +28,13 @@
     <button type="button" id="{{button1id}}" class="btn btn-danger"
             ng-disabled="!model.isMakuleraEnabled(model)"
             ng-click="button1click()">
-      <img ng-hide="model.acceptprogressdone" ng-src="/img/ajax-loader-small-green.gif" />
+      <img ng-hide="model.makuleraProgressDone" ng-src="/img/ajax-loader-small-red.gif" />
       <span message key="{{button1text}}"></span>
     </button>
     <button type="button" id="{{button2id}}" class="btn btn-danger"
             ng-disabled="!model.isMakuleraEnabled(model)"
             ng-click="button2click()">
-      <img ng-hide="model.acceptprogressdone" ng-src="/img/ajax-loader-small-green.gif" />
+      <img ng-hide="model.ersattProgressDone" ng-src="/img/ajax-loader-small-red.gif" />
       <span message key="{{button2text}}"></span>
     </button>
     <button type="button" id="{{button3id}}" class="btn btn-info" ng-click="button3click()">
