--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/headers/wcHeader.partial.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/headers/wcHeader.partial.html
@@ -7,8 +7,8 @@
         <img alt="Till startsidan" src="/img/webcert_logo.png" /></span>
       <span class="headerbox-date pull-left">
                   <span id="wc-header-location-date" class="location">{{today | date:"shortDate"}}</span>
-                  <span id="wc-header-location-care-giver" class="location"> - {{user.valdVardgivare.namn}}</span>
-                  <span id="wc-header-location-care-unit" class="location" wc-authority role="!PRIVATLAKARE"> - {{user.valdVardenhet.namn}}</span><br>
+                  <span id="wc-header-location-care-giver" class="location" ng-if="user.valdVardgivare"> - {{user.valdVardgivare.namn}}</span>
+                  <span id="wc-header-location-care-unit" class="location" ng-if="user.valdVardgivare" wc-authority role="!PRIVATLAKARE"> - {{user.valdVardenhet.namn}}</span><br>
                   <span id="otherLocations" class="otherLocations" wc-authority="ATKOMST_ANDRA_ENHETER"
                         ng-show="(stat.intygAndraEnheter+stat.fragaSvarAndraEnheter) > 0"><span
                       style="font-weight:bold">{{stat.intygAndraEnheter+stat.fragaSvarAndraEnheter}}</span> ej hanterade frågor och ej signerade utkast på andra vårdenheter.</span>
