INTYG-2885: Nu olika knappar med olika funktion när det finns ett påbörjat Utkast relaterat av typ KOMPLT

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/fk/arenden/komplettera/arendePanelSvarKompletteringsatgard.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/fk/arenden/komplettera/arendePanelSvarKompletteringsatgard.directive.html
@@ -1,1 +1,4 @@
-<button class="btn btn-success" id="answer-kompletteringsatgard-open-{{arendeSvar.fragaInternReferens}}" ng-click="openKompletteringDialog()">Svara</button>
+<span>
+  <button class="btn btn-success" id="answer-kompletteringsatgard-open-{{arendeSvar.fragaInternReferens}}" ng-click="openKompletteringDialog()">Svara</button>
+  <button class="btn btn-success" ng-if="showGoToUtkastButton" id="answer-kompletteringsatgard-open-utkast-{{arendeSvar.fragaInternReferens}}" ng-click="openKompletteringsUtkast()">Fortsätt på intygsutkast</button>
+</span>
