INTYG-2806: Lade dit bortglömt frågetecken med info på dialogen.

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/intyg-header/intyg-header.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/intyg-header/intyg-header.html
@@ -111,7 +111,7 @@
                   ng-click="makulera(viewState.intygModel)"
                   wc-check-vardenhet
                   vardenhet="{{viewState.enhetsId}}"
-                  uib-popover="Makulera intyg innebär att intyget återtas. Vid behov kan intyget ersättas med ett nytt."
+                  uib-popover="Makulerar intyget. Vid behov kan intyget ersättas med ett nytt."
                   popover-trigger="mouseenter"
                   popover-popup-delay="300"
                   popover-append-to-body="true">
