INTYG-2965: Tooltip fix. Ej klart.

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/headline.formly.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/headline.formly.html
@@ -1,5 +1,5 @@
 <div class="form-group form-inline" ng-switch on="{{to.level}}">
-  <h1 ng-switch-when="1" class="wc-headline-1">
+  <h1 ng-switch-when="1" class="wc-headline-1 page-title">
     <span ng-if="to.label" dynamic-label key="{{to.label}}.RBK"></span>
     <span ng-if="!to.labels && to.label" wc-help-mark field-dynamic-help-text="{{to.label}}.HLP"></span>
     <span ng-if="to.labels && to.label" wc-help-mark-group field-dynamic-label-group="to.labels"></span>
