--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/utkast-header/utkastHeader.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/utkast-header/utkastHeader.html
@@ -23,8 +23,8 @@
         </div>
         <a id="tillbakaButton" wc-authority="NAVIGERING" class="backlink-icon"
            href wc-back title="Tillbaka till Skriv intyg"></a>
-        <h1 style="display: inline-block; margin-right: 20px;">
-          <span message key="{{viewState.common.intyg.type}}.label.certtitle"></span><span wc-help-mark field-tooltip-placement="bottom" field-dynamic-help-text="FRM_2.RBK"></span>
+        <h1 class="header-fix-panel__title">
+          <span class="page-title"><span message key="{{viewState.common.intyg.type}}.label.certtitle"></span></span><span wc-help-mark field-tooltip-placement="bottom" field-dynamic-help-text="FRM_2.RBK" help-mark-class="header-fix-panel__popover-content" help-mark-appendtobody="false"></span>
         </h1>
 
         <div wc-intyg-relations></div>
