--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/sjukskrivningar.formly.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/sjukskrivningar.formly.html
@@ -1,4 +1,4 @@
-<div wc-date-period-validator model="model">
+<div wc-date-period-manager model="model">
   <div class="form-group">
   <label class="">
     <span dynamic-label key="{{to.label}}.RBK"></span>
