--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/wcHelpMark.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/wcHelpMark.directive.html
@@ -1,5 +1,3 @@
-<!--span class="glyphicon glyphicon-question-sign" tooltip-trigger="mouseenter"
-      uib-tooltip-html="{{text}}" tooltip-placement="right"></span-->
-<span ng-if="showHelp == true" class="glyphicon glyphicon-question-sign" uib-popover-html="text" popover-trigger="click"
+<span ng-if="showHelp == true" class="glyphicon glyphicon-question-sign" uib-popover-html="text" popover-trigger="mouseenter"
       popover-placement="{{placement}}" popover-popup-delay="300" popover-append-to-body="{{helpMarkAppendtobody}}">
 </span>
