INTYG-2882: Återinfört navigeringsdialogen i ärendehanteringen

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/fk/arenden/arendePanel.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/fk/arenden/arendePanel.directive.html
@@ -11,9 +11,9 @@
 
       <div arende-panel-header arende-list="arendeList" arende-list-item="arendeListItem" parent-view-state="parentViewState"></div>
 
-      <div arende-vidarebefordra arende-list-item="arendeListItem" panel-id="panelId" parent-view-state="parentViewState"></div>
+      <div arende-vidarebefordra arende-list-item="arendeListItem" panel-id="{{panelId}}" parent-view-state="parentViewState"></div>
 
-      <div arende-panel-fraga arende-list-item="arendeListItem" panel-id="panelId" parent-view-state="parentViewState"></div>
+      <div arende-panel-fraga arende-list-item="arendeListItem" panel-id="{{panelId}}" parent-view-state="parentViewState"></div>
 
       <div ng-repeat="kompletteringArendeListItem in arendeListItem.extraKompletteringarArenden">
 
@@ -23,13 +23,13 @@
 
           <div arende-panel-header arende-list="arendeList" arende-list-item="kompletteringArendeListItem" parent-view-state="parentViewState"></div>
 
-          <div arende-vidarebefordra arende-list-item="kompletteringArendeListItem" panel-id="panelId" parent-view-state="parentViewState"></div>
+          <div arende-vidarebefordra arende-list-item="kompletteringArendeListItem" panel-id="{{panelId}}" parent-view-state="parentViewState"></div>
 
-          <div arende-panel-fraga arende-list-item="kompletteringArendeListItem" panel-id="panelId" parent-view-state="parentViewState"></div>
+          <div arende-panel-fraga arende-list-item="kompletteringArendeListItem" panel-id="{{panelId}}" parent-view-state="parentViewState"></div>
 
       </div>
 
-      <div arende-panel-svar arende-list-item="arendeListItem" panel-id="panelId" parent-view-state="parentViewState"></div>
+      <div arende-panel-svar arende-list-item="arendeListItem" panel-id="{{panelId}}" parent-view-state="parentViewState"></div>
 
     </div>
 
