INTYG-2898: Lägg till kontroll på att datum i fält 2G TS-diabetes inte är längre bort än ett år

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/date/wcDatePickerField.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/date/wcDatePickerField.directive.html
@@ -4,6 +4,7 @@
             wc-set-date-on-close
             uib-datepicker-popup="{{format}}"
             max-date="{{maxDate}}"
+            min-date="{{minDate}}"
             ng-model-options="{ allowInvalid: true }"
             datepicker-options="dateOptions"
            ng-blur="onDatepickerInputFieldBlur()"
