INTYG-2949: Fix big radio button css

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/boolean.formly.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/boolean.formly.html
@@ -6,11 +6,11 @@
         </label>
     </div>
 
-    <label class="radio-inline">
+    <label class="radio-inline big-radio-label">
         <input id="{{options.key}}Yes" name="{{options.key}}" type="radio" class="big-radio"
                ng-value="true" ng-model="model[options.key]"/> Ja
     </label>
-    <label class="radio-inline">
+    <label class="radio-inline big-radio-label">
         <input id="{{options.key}}No" name="{{options.key}}" type="radio" class="big-radio"
                ng-value="false" ng-model="model[options.key]"/> Nej
     </label>
