--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/fk/arenden/arendePanel.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/fk/arenden/arendePanel.directive.html
@@ -29,7 +29,7 @@
 
       </div>
 
-      <div arende-panel-svar arende-list-item="arendeListItem" panel-id="{{panelId}}" parent-view-state="parentViewState"></div>
+      <div arende-panel-svar arende-list="arendeList" arende-list-item="arendeListItem" panel-id="{{panelId}}" parent-view-state="parentViewState"></div>
 
     </div>
 
