INTYG-2966: Markera obligatoriska frågor med * i intyget

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/boolean.formly.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/boolean.formly.html
@@ -2,6 +2,7 @@
     <div>
         <label class="inline-block" ng-class="{'bold' : to.bold}">
             <span dynamic-label key="{{to.label}}.RBK"></span>
+            {{to.required ? '*' : ''}}
             <span wc-help-mark field-dynamic-help-text="{{to.label}}.HLP"></span>
         </label>
     </div>
