--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/headline.formly.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/headline.formly.html
@@ -3,31 +3,37 @@
     <span ng-if="to.label" dynamic-label key="{{to.label}}.RBK"></span>
     <span ng-if="!to.labels && to.label" wc-help-mark field-dynamic-help-text="{{to.label}}.HLP"></span>
     <span ng-if="to.labels && to.label" wc-help-mark-group field-dynamic-label-group="to.labels"></span>
+    {{to.required ? '*' : ''}}
   </h1>
   <h2 ng-switch-when="2" class="wc-headline-2">
     <span ng-if="to.label" dynamic-label key="{{to.label}}.RBK"></span>
     <span ng-if="!to.labels && to.label" wc-help-mark field-dynamic-help-text="{{to.label}}.HLP"></span>
     <span ng-if="to.labels && to.label" wc-help-mark-group field-dynamic-label-group="to.labels"></span>
+    {{to.required ? '*' : ''}}
   </h2>
   <h3 ng-switch-when="3" class="wc-headline-3">
     <span ng-if="to.label" dynamic-label key="{{to.label}}.RBK"></span>
     <span ng-if="!to.labels && to.label" wc-help-mark field-dynamic-help-text="{{to.label}}.HLP"></span>
     <span ng-if="to.labels && to.label" wc-help-mark-group field-dynamic-label-group="to.labels"></span>
+    {{to.required ? '*' : ''}}
   </h3>
   <h4 ng-switch-when="4" class="wc-headline-4">
     <span ng-if="to.label" dynamic-label key="{{to.label}}.RBK"></span>
     <span ng-if="!to.labels && to.label" wc-help-mark field-dynamic-help-text="{{to.label}}.HLP"></span>
     <span ng-if="to.labels && to.label" wc-help-mark-group field-dynamic-label-group="to.labels"></span>
+    {{to.required ? '*' : ''}}
   </h4>
   <h4 ng-switch-when="5" class="instruction">
     <span ng-if="to.label" dynamic-label key="{{to.label}}.RBK"></span>
     <span ng-if="!to.labels && to.label" wc-help-mark field-dynamic-help-text="{{to.label}}.HLP"></span>
     <span ng-if="to.labels && to.label" wc-help-mark-group field-dynamic-label-group="to.labels"></span>
+    {{to.required ? '*' : ''}}
   </h4>
   <h5 ng-switch-default class="wc-headline-2">
     <span ng-if="to.label" dynamic-label key="{{to.label}}.RBK"></span>
     <span ng-if="!to.labels && to.label" wc-help-mark field-dynamic-help-text="{{to.label}}.HLP"></span>
     <span ng-if="to.labels && to.label" wc-help-mark-group field-dynamic-label-group="to.labels"></span>
+    {{to.required ? '*' : ''}}
   </h5>
 </div>
 
