--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/singleText.formly.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/singleText.formly.html
@@ -3,6 +3,7 @@
     <label class="form-control-label">
         <span ng-if="to.label" dynamic-label key="{{to.label}}.RBK"></span>
         <span ng-if="to.staticLabel">{{to.staticLabel}}</span>
+        {{to.required ? '*' : ''}}
     </label>
     <span ng-if="to.help" wc-help-mark field-dynamic-help-text="{{to.help}}.HLP"></span>
   </div>
