--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/wcField.formly.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/wcField.formly.html
@@ -1,7 +1,11 @@
 <div>
   <a id="anchor.{{to.categoryName}}" name="anchor.{{to.categoryName}}"></a>
-  <div wc-field field-dynamic-label="KAT_{{to.category}}.RBK" field-dynamic-help-text="KAT_{{to.category}}.HLP"
-       field-has-errors="formState.viewState.common.validationMessagesGrouped[to.categoryName]" class="field-fade">
+  <div wc-field
+       field-dynamic-label="KAT_{{to.category}}.RBK"
+       field-dynamic-help-text="KAT_{{to.category}}.HLP"
+       field-has-errors="formState.viewState.common.validationMessagesGrouped[to.categoryName]"
+       field-required="{{to.required}}"
+       class="field-fade">
 
     <div class="alert alert-danger" ng-if="formState.viewState.common.validationMessagesGrouped[to.categoryName]"
          id="validationMessages_{{to.categoryName}}">
