--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/diagnos.formly.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/diagnos.formly.html
@@ -35,7 +35,9 @@
             <td>
                 <div class="input-group">
                     <input type="text" class="form-control" id="diagnoseCode-{{$index}}" name="diagnoseCode{{$index}}" value=""
-                           class='diagnose-code col-xs-11 form-control' ng-model="diagnos.diagnosKod"
+                           class='diagnose-code col-xs-11 form-control'
+                           ng-model="diagnos.diagnosKod"
+                           ng-change="onDiagnoseCodeChanged($index)"
                            uib-typeahead="d.value as d.label for d in getDiagnoseCodes(formState.diagnosKodSystem, $viewValue) | limitTo:10"
                            typeahead-min-length="3"
                            typeahead-editable="false"
@@ -61,6 +63,7 @@
                 <input type="text" class="form-control maxwidth" id="diagnoseDescription-{{$index}}"
                        class="col-xs-12 form-control" name="diagnose.description" value=""
                        ng-model= "diagnos.diagnosBeskrivning"
+                       ng-change="onDiagnoseDescriptionChanged($index)"
                        uib-typeahead="d.value as d.label for d in searchDiagnoseByDescription(formState.diagnosKodSystem, $viewValue)"
                        typeahead-on-select="onDiagnoseDescriptionSelect($index, $item)"
                        typeahead-template-url="/web/webjars/common/webcert/gui/formly/diagnos.formly.typeahead_template.html"
